
2004-02-25  Michael Gogins <gogins@pipeline.com>

	Modified sources to #ifdef for HAVE_LIBSNDFILE as defined by configure.ac,
	not _SNDFILE_.

	Removed jpff_glue.c as its function is now performed by csound.c.
	
	Deleted load_opcodes.c after merging it with dl_opcodes.c.
	

2004-02-22  Michael Gogins <gogins@pipeline.com>

	New configure.ac, which is a modified version of John Ramsdell's
	configure.ac. Thanks to John for providing a framework, implementing the
	required tests, and enabling me to understand the online documentation.

	All new Makefile.am, which puts all source configuration in one file for all
	targets.

	Renamed some "main.c" files to prevent naming conflicts caused by having a
	single Makefile.am.

	Moved some opcodes from Opcodes back to OOps due to tangled dependencies.

	Plugin opcodes are loaded from the directory pointed to by the OPCODEDIR
	environment variable. The --shared-lib flag is still effective.

	Enabled PortAudio in Csound 5 together with libsndfile, and changed
	PortAudio support from v18 to v19.

	Renamed libanal.a to libustub.a and moved as much code as possible
	from analysis and utility program "main" files to ustub.c.

2004-01-29  John ffitch  <jpff@codemist.co.uk>

	* Engine/insert.c (ingoto): Check that we are in i-rate case

2004-01-13  John ffitch  <jpff@cs.bath.ac.uk>

	* Opcodes/sfont.c: casts in many debug statements

	* Opcodes/mandolin.c (mandolin, mandolinset): Use ENVIRON*
	argument to Delayline functions

2004-01-01  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pluck.c (filter3Set): Need to initialise ->x1 and ->x2
	to zero

	* Opcodes/flanger.c (wguide2, wguide1): Avoid frequencies below 5Hz

2003-11-30	Steven Yi	<stevenyi@csounds.com>
	* Engine/insert.c (orcompact): Added calls to deinitialize i-time opcodes

2003-11-29	Steven Yi 	<stevenyi@csounds.com>

	* H/cs.h: all thing except compability macros moved out to csoundCore.h
	
	* H/csoundCore.h: contains everything except compability macros
	